--- a/CodeModel/Client/Client.vcxproj
+++ b/CodeModel/Client/Client.vcxproj
@@ -13,7 +13,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{533570C8-CB4A-405E-88D5-1191642BD993}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>MyStudy</RootNamespace>
+    <RootNamespace>Client</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
