--- a/CodeModel/RenderD3D11/RenderD3D11.vcxproj
+++ b/CodeModel/RenderD3D11/RenderD3D11.vcxproj
@@ -86,6 +86,8 @@
   <ItemGroup>
     <ClInclude Include="..\ModuleHeader\RenderD3D11\D3D11Class.h" />
     <ClInclude Include="..\ModuleHeader\RenderD3D11\RenderExport.h" />
+    <ClInclude Include="ColorShader.h" />
+    <ClInclude Include="LineShape.h" />
     <ClInclude Include="MtlShader.h" />
     <ClInclude Include="IShape.h" />
     <ClInclude Include="IShader.h" />
@@ -97,6 +99,8 @@
     <ClInclude Include="TextureManager.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ColorShader.cpp" />
+    <ClCompile Include="LineShape.cpp" />
     <ClCompile Include="MtlShader.cpp" />
     <ClCompile Include="D3D11Class.cpp" />
     <ClCompile Include="dllmain.cpp">
