--- a/CodeModel/RenderD3D11/RenderD3D11.vcxproj.filters
+++ b/CodeModel/RenderD3D11/RenderD3D11.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="ColorShader.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="AxisShape.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -87,6 +90,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="ColorShader.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="AxisShape.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
