--- a/CodeModel/RenderD3D11/RenderD3D11.vcxproj.filters
+++ b/CodeModel/RenderD3D11/RenderD3D11.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClInclude Include="AxisShape.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="..\ModuleHeader\RenderD3D11\Camera.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -93,6 +96,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="AxisShape.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Camera.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
