--- a/CodeModel/RenderD3D11/RenderD3D11.vcxproj.filters
+++ b/CodeModel/RenderD3D11/RenderD3D11.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClInclude Include="..\ModuleHeader\RenderD3D11\Camera.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="FontShape.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -99,6 +102,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="Camera.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="FontShape.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
