--- a/CodeModel/RenderD3D11/RenderD3D11.vcxproj
+++ b/CodeModel/RenderD3D11/RenderD3D11.vcxproj
@@ -94,6 +94,7 @@
     <ClInclude Include="MtlShader.h" />
     <ClInclude Include="IShape.h" />
     <ClInclude Include="IShader.h" />
+    <ClInclude Include="MtlShape2D.h" />
     <ClInclude Include="ShapeManager.h" />
     <ClInclude Include="MtlShape.h" />
     <ClInclude Include="ShaderManager.h" />
@@ -117,6 +118,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
       </PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="MtlShape2D.cpp" />
     <ClCompile Include="ShapeManager.cpp" />
     <ClCompile Include="MtlShape.cpp" />
     <ClCompile Include="ShaderManager.cpp" />
