--- a/CodeModel/RenderD3D11/RenderD3D11.vcxproj.filters
+++ b/CodeModel/RenderD3D11/RenderD3D11.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClInclude Include="FontShape.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="MtlShape2D.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -105,6 +108,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="FontShape.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="MtlShape2D.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
