--- a/CodeModel/RenderD3D11/RenderD3D11.vcxproj.filters
+++ b/CodeModel/RenderD3D11/RenderD3D11.vcxproj.filters
@@ -69,6 +69,15 @@
     <ClInclude Include="MtlShape2D.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="FontShader.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Vertex.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="FontTextureManager.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -111,6 +120,15 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="MtlShape2D.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="FontShader.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Vertex.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="FontTextureManager.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
