--- a/CodeModel/Common/Common.vcxproj.filters
+++ b/CodeModel/Common/Common.vcxproj.filters
@@ -27,6 +27,12 @@
     <ClInclude Include="..\ModuleHeader\Common\TraceWin.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="..\ModuleHeader\Common\StringHelp.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="..\ModuleHeader\Common\CommonExport.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -36,6 +42,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="dllmain.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="StringHelp.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
