--- a/CodeModel/RenderD3D11/RenderD3D11.vcxproj
+++ b/CodeModel/RenderD3D11/RenderD3D11.vcxproj
@@ -59,8 +59,8 @@
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <ImportLibrary>..\ModuleLib\$(TargetName).lib</ImportLibrary>
-      <AdditionalDependencies>dxgi.lib;d3d11.lib;d3dx11.lib;d3dx10.lib;freetype.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>..\..\ThirdPart\DirectX\Lib\x86;..\..\ThirdPart\FreeType2\Debug\x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>dxgi.lib;d3d11.lib;d3dx11.lib;d3dx10.lib;freetype.lib;common.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>..\..\ThirdPart\DirectX\Lib\x86;..\..\ThirdPart\FreeType2\Debug\x86;..\ModuleLib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -89,10 +89,12 @@
     <ClInclude Include="..\ModuleHeader\RenderD3D11\RenderExport.h" />
     <ClInclude Include="AxisShape.h" />
     <ClInclude Include="ColorShader.h" />
+    <ClInclude Include="ColorShape.h" />
     <ClInclude Include="FontTextureManager.h" />
     <ClInclude Include="FontShader.h" />
     <ClInclude Include="FontShape.h" />
     <ClInclude Include="LineShape.h" />
+    <ClInclude Include="LoadShape.h" />
     <ClInclude Include="MtlShader.h" />
     <ClInclude Include="IShape.h" />
     <ClInclude Include="IShader.h" />
@@ -110,10 +112,12 @@
     <ClCompile Include="AxisShape.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="ColorShader.cpp" />
+    <ClCompile Include="ColorShape.cpp" />
     <ClCompile Include="FontTextureManager.cpp" />
     <ClCompile Include="FontShader.cpp" />
     <ClCompile Include="FontShape.cpp" />
     <ClCompile Include="LineShape.cpp" />
+    <ClCompile Include="LoadShape.cpp" />
     <ClCompile Include="MtlShader.cpp" />
     <ClCompile Include="D3D11Class.cpp" />
     <ClCompile Include="dllmain.cpp">
