--- a/CodeModel/Common/Common.vcxproj
+++ b/CodeModel/Common/Common.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{A0A3A92E-E4D5-4646-9F22-862A0817E1F6}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>Common</RootNamespace>
+    <ProjectName>LeeCommon</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
